# Mizu

backend/: Cargo.toml  config.toml  run_tests.sh
backend/.cargo/: config.toml
backend/migrations/: 20250928033948_create_articles_table.sql  20251020143532_update_articels_table.sql  20251021103604_create_article_paths_table.sql  20251021142406_update_article_table.sql
backend/src/: app_state.rs  articles.rs  common.rs  config.rs  domain.rs  errors.rs  github_api.rs  github_webhook.rs  handlers.rs  infrastructure.rs  lib.rs  main.rs  search.rs  some_errors.rs
backend/src/application/: article_service.rs
backend/src/domain/: articles.rs  repositories.rs  search.rs
backend/src/handlers/: articles.rs  search.rs  webhook.rs
backend/src/infrastructure/: db.rs  github.rs  time_utils.rs
backend/src/infrastructure/db/: sqlx_repo.rs
backend/src/infrastructure/github/: api_client.rs  client.rs  signature.rs  webhook.rs  webhook_parser.rs
backend/src/infrastructure/search/: index.rs
backend/src/interfaces/: http.rs
backend/src/interfaces/http/: dtos.rs  handlers.rs  route.rs
backend/src/interfaces/http/handlers/: articles.rs  not_found.rs  search.rs  webhook.rs
backend/tests/: domain_tests.rs  repository_tests.rs  service_tests.rs
backend/tests/common/: mod.rs
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/articles/: page.tsx
frontend/app/articles/[articleId]/[articleTitle]/: layout.tsx  page.tsx
frontend/app/components/: ArticleCardComponent.tsx  ArticleContainer.tsx  ArticleList.tsx  ClientProviders.tsx  Cursor.tsx  CursorToggle.tsx  FloatingMenu.tsx  Footer.tsx  Header.module.css  Header.tsx  HeroSection.tsx  HolographicAvatar.tsx  MagneticElement.tsx  NavigateBar.tsx  ScrollDownArrow.tsx  ScrollProgress.tsx  ScrollToBottom.tsx  ScrollToEdge.tsx  SearchBar.tsx  SocialButton.tsx  ThemeToggle.tsx  Toolbar.tsx  article-list.tsx  client-providers.tsx  cursor-toggle.tsx  cursor.tsx  cursor_toggle.tsx  header.cva.ts  header.tsx  magnetic-element.tsx  scroll-progress.tsx  scroll-to-bottom.tsx  scroll_progress.tsx  scroll_to_bottom.tsx  search_bar.tsx  theme-toggle.tsx  theme_toggle.tsx  toolbar.tsx
frontend/app/components/CodeBlock/: CodeBlock.tsx  codeblock.css
frontend/app/components/Header/: Header.tsx  header.cva.ts
frontend/app/context/: CursorContext.tsx  cursor_context.tsx
frontend/app/hooks/: useIsMobile.ts
frontend/app/lib/: shiki.ts
frontend/app/links/: page.tsx
frontend/app/notes/: page.tsx
frontend/app/notes/[noteId]/: page.tsx
frontend/app/pictures/: page.tsx
frontend/app/pictures/[pictureId]/: pate.tsx
frontend/app/talks/: page.tsx
frontend/app/talks/[talkId]/[talkTitle]/: page.tsx
frontend/app/thinks/: page.tsx
frontend/app/thinks/[thinkId]/[thinkTitle]/: page.tsx
frontend/types/: types.ts
