[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.0.0"
meilisearch-sdk = "0.30.0"
mimalloc = "0.1.48"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "time",
] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
