[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
webhook = [
    "dep:git2",
    "dep:ring",
    "dep:hex",
    "dep:hmac",
    "dep:sha2",
    "dep:octocrab",
    "dep:notify",
    "dep:base64",
    "dep:gray_matter",
]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
dotenvy = "0.15.7"
# jsonwebtoken = "10.0.0"
meilisearch-sdk = "0.30.0"
mimalloc = "0.1.48"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "time",
] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20" }
config = { version = "0.15.18", features = ["toml"] }
git2 = { version = "0.20.2", optional = true }
ring = { version = "0.17.14", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.9", optional = true }
octocrab = { version = "0.47.0", optional = true }
notify = { version = "8.2.0", optional = true }
base64 = { version = "0.22.1", optional = true }
gray_matter = { version = "0.3.2", optional = true }

[dev-dependencies]
# reqwest = { version = "0.12.23", features = ["json"] }
# rand = "0.9.2"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
